# lossless-hermes

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BLOCKERS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LEDGER.md  LICENSE  README.md  ROADMAP.md  STATUS.md  plugin.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: port-issue.md
.github/workflows/: ci.yml  live-eval.yml  schema-diff.yml
docs/: related-work.md  risks.md  typebox-translation.md
docs/adr/: 000-template.md  001-plugin-distribution-model.md  002-plugin-data-directory.md  003-database-isolation.md  004-sqlite3-backend.md  005-python-version.md  006-dependency-pinning.md  007-hermes-as-dependency.md  008-typechecker.md  009-per-message-ingest.md  010-always-on-assembly.md  011-bootstrap-strategy.md  012-subagent-defer.md  013-owner-gating.md  014-recall-policy-injection.md  015-hermes-upstream-patches.md  016-typebox-translation.md  017-sync-vs-async-db.md  018-concurrency-model.md  019-http-client.md  020-worker-loop-dispatcher.md  021-token-estimator.md  022-voyage-credentials.md  023-config-delivery.md  024-project-layout.md  025-openclaw-migration.md  026-schema-versioning.md  027-engine-splitting.md  028-vitest-to-pytest.md  029-wave-fix-provenance.md  030-pr-628-stub-tier-deferred.md  031-synthesis-tier-model-routing.md  032-per-turn-assembly-not-required.md  033-embeddings-default-posture.md  034-plugin-distribution-directory-mode.md  035-lcm-status-doctor-model-tools.md  036-entity-synthesis-keep-with-kill-criterion.md  037-lcm-expand-deferred.md
docs/benchmarks/: voyage-recall-2026-q2.md
docs/porting-guides/: assembler-compaction.md  doctor-ops.md  embeddings.md  engine.md  entity-extraction.md  plugin-glue.md  storage.md  synthesis.md  tests-and-config.md  tools.md
docs/reference/: dependencies.md  hermes-hooks.md  lcm-source-map.md
docs/spike-results/: 001-sqlite-vec-python.md  002-hermes-pre-llm-call.md  003-identity-hash.md  004-voyage-python-client.md  005-sqlite3-fts5-trigram.md
docs/upstream/: 001-preassemble-abc.md  001a-preassemble-vs-7464-investigation.md  002-register-command.md  003-engine-ingest.md  004-cache-token-forwarding.md  README.md
epics/00-scaffolding/: README.md
epics/01-storage/: 01-01-db-connection.md  01-02-db-config.md  01-03-db-features.md  01-04-migration-core-tables.md  01-05-migration-fts5-tables.md  01-06-migration-v41-tables.md  01-07-message-identity.md  01-08-conversation-store.md  01-09-summary-store.md  01-10-telemetry-stores.md  01-11-fts5-helpers.md  01-12-large-files.md  01-13-integrity-prune.md  01-14-transcript-repair.md  01-15-versioned-backfills.md  README.md
epics/02-engine-skeleton/: 02-01-engine-init.md  02-02-engine-state.md  02-03-on-session-lifecycle.md  02-04-token-tracking.md  02-05-should-compress.md  02-06-noop-compress.md  02-07-hook-registrations.md  02-08-per-session-locks.md  02-09-circuit-breaker-scaffold.md  02-10-slash-command-dispatcher.md  README.md
epics/03-ingest-assembly/: 03-01-token-estimator.md  03-02-ingest-diff-on-turn.md  03-03-ingest-from-handle-tool-call.md  03-04-resolve-items.md  03-05-fresh-tail-resolver.md  03-06-budget-walk.md  03-07-orphan-stripping.md  03-08-assemble-orchestration.md  03-09-always-on-substitution-hook.md  03-10-recall-policy-injection.md  README.md
epics/04-compaction/: 04-01-compaction-evaluate.md  04-02-compaction-leaf-pass.md  04-03-compaction-condensation.md  04-04-anti-thrashing.md  04-05-summarize-prompt-templates.md  04-06-summarize-fallback-chain.md  04-07-circuit-breaker-integration.md  04-08-telemetry-write.md  README.md
epics/05-embeddings/: 05-01-voyage-client.md  05-02-credentials-resolver.md  05-03-vec0-store.md  05-04-vec0-load-pattern.md  05-05-worker-loop.md  05-06-worker-lock.md  05-07-backfill-cron.md  05-08-semantic-search.md  05-09-hybrid-search.md  05-10-degraded-modes.md  05-11-autostart-wiring.md  README.md
epics/06-tools/: 06-01-typebox-translation-conventions.md  06-02-tool-dispatch-table.md  06-03-runwithtokengate-middleware.md  06-04-tools-common.md  06-05-conversation-scope.md  06-06-expansion-recursion-guard.md  06-07-lcm-describe.md  06-08-lcm-grep-regex-fulltext.md  06-09-lcm-grep-hybrid-semantic.md  06-10-lcm-get-entity.md  06-11-lcm-search-entities.md  06-12-lcm-expand.md  06-13-lcm-synthesize-around.md  06-14-lcm-compact.md  06-15-tool-descriptions-verbatim.md  README.md
epics/07-entity-synthesis/: 07-01-entity-shared-cte.md  07-02-entity-coreference-worker.md  07-03-entity-extractor-llm.md  07-04-extraction-autostart.md  07-05-synthesis-dispatch.md  07-06-synthesis-cache-key.md  07-07-synthesis-invalidation.md  07-08-prompt-registry.md  07-09-synthesis-audit.md  07-10-tier-routing.md  README.md
epics/08-cli-ops/: 08-01-slash-command-router.md  08-02-status.md  (+16 more)
scripts/: benchmark_voyage_recall.py  extract_lcm_schema.ts  extract_python_schema.py  extract_tool_descriptions.mjs  install.sh  run_live_eval.py  schema_diff.sh  schema_subset_check.py  verify_identity_hash_parity.py
tests/: _matchers.py  conftest.py  test_assembler_assemble.py  test_assembler_blocks.py  test_assembler_budget_walk.py  test_assembler_fresh_tail.py  test_assembler_orphan_stripping.py  test_circuit_breaker.py  test_compaction_anti_thrashing.py  test_compaction_circuit_breaker_integration.py  test_compaction_condensation.py  test_compaction_evaluate.py  test_compaction_leaf_pass.py  test_compaction_maintenance.py  test_compaction_telemetry.py  test_compaction_telemetry_write.py  test_config_load.py  test_conversation_scope.py  test_conversation_store.py  test_db_config.py  test_db_connection.py  test_db_features.py  test_db_open_db.py  test_dispatch_registry_coverage.py  test_engine_assemble.py  test_engine_ingest.py  test_engine_noop.py  test_engine_skeleton.py  test_engine_state_fields.py  test_estimate_tokens.py  test_fts5_sanitize.py  test_full_text_fallback.py  test_full_text_sort.py  test_handle_tool_call_ingest.py  test_hermes_bridge.py  test_hermes_llm.py  test_hook_registrations.py  test_ingest_base64_guard.py  test_ingest_cursor_v012.py  test_integrity.py  (+25 more)
(+235 files in other folders)
