[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lossless-hermes"
version = "0.1.0"
description = "Lossless Context Management plugin for hermes-agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Electric Sheep HQ" }]

# Exact pins on every direct runtime dep (see Hermes pyproject.toml lines 14-39
# for the canonical rationale — same supply-chain risk model applies here).
# When updating: bump the version below AND regenerate uv.lock with `uv lock`.
dependencies = [
    "httpx[socks]==0.28.1",      # Voyage HTTP — matches Hermes pin
    "sqlite-vec==0.1.9",          # vec0 KNN — see spike 001
    "pydantic==2.12.5",           # Config + Voyage response validation — matches Hermes pin
    "pyyaml==6.0.3",              # config.yaml loading — matches Hermes pin
    "tenacity==9.1.4",            # Non-hot-path retries — matches Hermes pin
]

[project.optional-dependencies]
# Cross-platform SQLite fallback. Stdlib sqlite3 covers 100% of mainstream
# Python builds (per spike 001 + 005); apsw is the documented fallback only.
apsw = ["apsw==3.53.1.0"]

# Dev/test surface. Pinned to Hermes's versions where overlap exists so
# plugin authors can run Hermes's test suite alongside ours without conflict.
dev = [
    "pytest==9.0.3",              # bumped above Hermes pin to close GHSA tmpdir CVE (dependabot #1, moderate)
    "pytest-asyncio==1.3.0",      # matches Hermes pin
    "pytest-mock==3.14.0",
    "pytest-cov==6.0.0",
    "respx==0.22.0",              # httpx mock router for Voyage tests (bumped from 0.21.1: 0.21.x passes a bytes method through HTTPCoreMocker → respx's Method matcher fails to compare bytes vs str on httpx 0.28.1)
    "jsonschema==4.26.0",         # Draft-07 schema well-formedness CI gate for LCM tool schemas (ADR-016, issue 06-01)
    "ruff==0.15.10",              # matches Hermes pin
    "ty==0.0.21",                 # matches Hermes pin
    "pre-commit==4.0.1",
    "pydantic-settings==2.14.1",  # Optional env-var-loader helper — see issue 01-02 (not used in resolver but available for future fields)
]
# Opt-in: legacy type-check via mypy for IDE plugins that don't yet speak ty.
type-mypy = ["mypy==1.13.0"]

[project.entry-points."hermes_agent.plugins"]
# Entry point group is canonical — see hermes_cli/plugins.py line 170:
#   ENTRY_POINTS_GROUP = "hermes_agent.plugins"
# The Hermes plugin loader iterates entries in this group at startup,
# imports each callable, and invokes it with a PluginContext. The plugin's
# register() then calls ctx.register_context_engine(LosslessEngine()).
lossless-hermes = "lossless_hermes:register"

[project.scripts]
# Standalone CLI entry — used by operator subcommands that don't need a
# running Hermes session (e.g. `lossless-hermes import-openclaw` per
# ADR-025 / epic 08-15). Dispatches to a subcommand main in
# lossless_hermes.cli. The same subcommand bodies are also wired into
# the /lcm slash command tree via lossless_hermes.plugin.commands.
lossless-hermes = "lossless_hermes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lossless_hermes"]

[tool.hatch.build.targets.sdist]
include = ["src/lossless_hermes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Marker set defined by ADR-028 §Consequences. Live suites are opt-in:
# the default `pytest` invocation skips them via `addopts` below; CI runs
# them on `main` pushes only.
markers = [
    "live: live API integration tests (requires API keys; opt-in)",
    "live_voyage: live Voyage API tests",
    "live_llm: live LLM provider tests",
]
addopts = "-m 'not live and not live_voyage and not live_llm'"

[tool.ruff]
line-length = 100
target-version = "py311"
preview = true  # mirrors Hermes — needed for PLW1514

[tool.ruff.lint]
# At minimum, inherit Hermes's load-bearing rule (explicit encoding= on open()).
# We can add more rules in a follow-up; starting with parity is safest.
select = ["PLW1514"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLW1514"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.coverage.run]
source = ["lossless_hermes"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
